flux-system/netpols.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: ingress-to-virtual-garden-kube-apiserver-tcp-443-from-flux-system-helm
  namespace: garden
spec:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: flux-system
      podSelector:
        matchLabels:
          app: helm-controller
    ports:
    - port: 443
      protocol: TCP
  podSelector:
    matchLabels:
      app: kubernetes
      role: apiserver
  policyTypes:
  - Ingress
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: ingress-to-virtual-garden-kube-apiserver-tcp-443-from-flux-system-kustomize
  namespace: garden
spec:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: flux-system
      podSelector:
        matchLabels:
          app: kustomize-controller
    ports:
    - port: 443
      protocol: TCP
  podSelector:
    matchLabels:
      app: kubernetes
      role: apiserver
  policyTypes:
  - Ingress
